# content_platform

./: .dockerignore  .env.backend  .env.backend.example  .env.example  .env.frontend  .env.frontend.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  m2_pro_config.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  run-checks.sh  run-precommit.sh  setup_structure.sh
.devcontainer/: devcontainer.json
.docker/: Dockerfile.api  Dockerfile.celery  Dockerfile.frontend  Dockerfile.redis  example_Dockerfile.api.txt  example_Dockerfile.celery.txt  example_Dockerfile.frontend.txt  example_Dockerfile.redis.txt
config/grafana/: grafana-init.sh
config/grafana/provisioning/alerting/: default.yml
config/grafana/provisioning/dashboards/: content-platform-overview.json  dashboards.yml
config/grafana/provisioning/datasources/: postgres.yml
config/grafana/provisioning/plugins/: default.yml
config/postgres/: init-databases.sh  pg_hba.conf
config/prometheus/: prometheus.yml
config/redis/: docker-entrypoint.sh  monitor-redis.sh  redis.conf
docs/: 001_02_dev_guide.md  001_debug_guide.md  001_dev_and_testing_guide.md  001_dev_guide.md  001_fix_issues.md  001_python_type_lint_check_setup.md  001_rapid_dev_guide.md  001_test_guide.md  001_testing_guide_DONE.md  002_dev_and_testing_guide.md  002_dev_guide.md  002_testing_guide copy.md  002_testing_guide.md  003_dev_and_testing_guide.md  005_dev_and_testing_guide.md  additional_questions.md  dark_mode_and_shadcnui_setup.md  debug.md  debug_guide.md  dev_tools_setup.md  docker_frontend_build_issue.md  local_venv_setup.md  m2_pro_setup.md  more_ai_features_brainstorm.md  project_single_source_of_truth.md  server_client_notes.md  video_composition_brainstorm.md
docs/done/: 001_debug_guide_DONE.md  001_dev_and_testing_guide_DONE.md  001_dev_guide_DONE.md  001_python_type_lint_check_setup_outdated_DONE.md  dark_mode_and_shadcnui_setup_DONE.md  dev_tools_setup_DONE.md  docker_frontend_build_issue_DONE.md  m2_pro_setup_DONE.md  root_package_json_notes_DONE.md  server_client_notes_DONE.md
src/: __init__.py  test_tools.py
src/backend/: .env.example  __init__.py  celeryconfig.py  check_services.sh  cleanup.sh  dump.rdb  main.py  requirements.txt  start.sh
src/backend/api/: dependencies.py
src/backend/api/routers/: projects.py
src/backend/core/: config.py  database.py  utils.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 20250211_2248_05208814684b_initial_migration.py  (+3 more)
src/backend/models/: __init__.py  asset.py  base.py  project.py
src/backend/modules/: __init__.py
src/backend/schemas/: asset.py  project.py
src/backend/tasks/: __init__.py  broker_test.py  debug_tasks.py  debug_utils.py  healthcheck.sh  project_tasks.py
src/backend/tests/: conftest.py  test_tools_config.py
src/frontend/: .env.local  .eslintrc.js  .eslintrc.json  cleanup.sh  middleware.ts  next.config.js  package-lock.json  package.json  start.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
src/frontend/app/: layout.tsx  page.tsx
src/frontend/components/: project-details.tsx  theme-provider.tsx  theme-toggle.tsx
src/frontend/lib/: api.ts
src/frontend/types/: index.d.ts
(+13 files in other folders)
