[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content_platform"
version = "0.1.0"
description = "Content Platform Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
# Black will still format docstrings but won't touch their line length

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
# Ensure isort follows the same rules as Black
