[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "content_platform"
version = "0.1.0"
description = "Content Platform Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
# Black will still format docstrings but won't touch their line length

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "**/venv", "**/.venv", "**/site-packages"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportPrivateUsage = true
reportUnusedImport = true
reportUntypedFunctionDecorator = true
reportMissingTypeArgument = true

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
exclude = [
    "tests/.*",
    "venv/.*",
    ".venv/.*",
    "site-packages/.*"
]

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "fastapi.*",
    "prometheus_fastapi_instrumentator.*",
    "passlib.*",
    "python_jose.*",
    "moviepy.*",
    "pytest.*",
    "alembic.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
